--- a/composer.json
+++ b/composer.json
@@ -57,6 +57,7 @@
 
         "swiftmailer/swiftmailer":         "~5.4.0",
         "symfony/yaml":                    "~3.4.0",
+        "symfony/http-foundation":         "~3.4.0",
         "symfony/console":                 "~3.4.0",
         "symfony/finder":                  "~3.4.0",
         "symfony/dom-crawler":             "~3.4.0",
